Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
- Searching is now done by default in the entire site
Bug fixes:
~~~~~~~~~~
- computeId now handles gracefully reserved ids (no more error message)
- #312: refactor export tab to use smart writing. Now detects quotes used and
  put stronger quotes.
- Using a more meaningful title for image in image boxes
- fix: SectionManager or SectionReview not able to view and manage expired
  document
- fix: draft and locked status not l10n in history
- fix: install script cps_update_i18n broken
- Now using a relative URL instead of an absolute URL to access the document
  revisions
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
- optimizing 'search here', make it much faster than 'search entire site'
- Some JavaScript functions renamed as they are now used for things other than
  just tooltips
  toggleFormTooltip -> toggleElementVisibility
  showFormTooltip   -> showElement
- using the new CPS Registration Tool.
- javascript files are now dtml file and handle cache and content type 
  properly