@@ -16,6 +16,7 @@ Bug fixes:
 - fix: install script cps_update_i18n broken
 - Now using a relative URL instead of an absolute URL to access the document
   revisions
+- status history view is now possible even on archived revisions
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
 - optimizing 'search here', make it much faster than 'search entire site'
